Added README file

--- a/samples/apache/error.cfg
+++ b/samples/apache/error.cfg
@@ -2,11 +2,8 @@ environment=samples-apache
 verbosity=2
 
 [logs]
+log_file=error.log
 log_folder=./apache/logs
-log_file_pattern=error.log
-log_type_pattern=\] \[%type\] \[
 log_types=error warn notice
+log_type_pattern=\] \[%type\] \[
 log_notification_level=warn
-
-[mail]
-mail_pretend=1
