Minor notification improvements

--- a/samples/apache/error.cfg
+++ b/samples/apache/error.cfg
@@ -3,6 +3,9 @@ verbosity=2
 
 [logs]
 log_file=error.log
+log_file_pattern=error_%date.log
+log_file_date_format=%Y
+log_file_date_delay=-365
 log_folder=./apache/logs
 log_types=error warn notice
 log_type_pattern=\] \[%type\] \[
